--- a/testdata/host_vars/customer.host/vars.yml
+++ b/testdata/host_vars/customer.host/vars.yml
@@ -4,6 +4,9 @@ etke_service_email: yes
 etke_service_server: cpx11
 etke_service_support: dedicated
 
+# ssh
+ansible_ssh_private_key_file: /from/host/vars
+
 # postgres
 devture_postgres_connection_password: TODO64
 
