--- a/testdata/host_vars/setup.host/vars.yml
+++ b/testdata/host_vars/setup.host/vars.yml
@@ -5,6 +5,9 @@ etke_service_server: cpx11
 etke_service_support: dedicated
 etke_service_maintenance_branch: fresh
 
+# ssh
+ansible_ssh_private_key_file: /from/host/vars
+
 # postgres
 devture_postgres_connection_password: TODO64
 
